Git Tests/force-app/main/default/default/objects/QuoteLineItem/fields/CodigoItem__c.field-meta.xml
<CustomField>
    <fullName>CodigoItem__c</fullName>
    <label>Código do item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>