Git Tests/force-app/main/default/default/objects/QuoteLineItem/fields/FatorConversao__c.field-meta.xml
<CustomField>
    <fullName>FatorConversao__c</fullName>
    <label>Fator de conversão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>