Git Tests/force-app/main/default/default/objects/QuoteLineItem/fields/NumeroAnvisa__c.field-meta.xml
<CustomField>
    <fullName>NumeroAnvisa__c</fullName>
    <formula>Product2.NumeroAnvisa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número Anvisa</label>
    <type>Text</type>
</CustomField>