Git Tests/force-app/main/default/default/objects/QuoteLineItem/fields/PrecoPDF__c.field-meta.xml
<CustomField>
    <fullName>PrecoPDF__c</fullName>
    <formula>OpportunityLineItem.PrecoPDF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor de venda Unit.</label>
    <type>Text</type>
</CustomField>