Git Tests/force-app/main/default/default/objects/QuoteLineItem/fields/PrincipioAtivo__c.field-meta.xml
<CustomField>
    <fullName>PrincipioAtivo__c</fullName>
    <label>Princípio ativo do produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>