Git Tests/force-app/main/default/default/objects/QuoteLineItem/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <description>Nome do produto com a descrição técnica concatenada.</description>
    <label>Produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>