Git Tests/force-app/main/default/default/objects/QuoteLineItem/fields/QuantidadePDF__c.field-meta.xml
<CustomField>
    <fullName>QuantidadePDF__c</fullName>
    <formula>OpportunityLineItem.QuantidadePDF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade</label>
    <type>Text</type>
</CustomField>