Git Tests/force-app/main/default/default/objects/QuoteLineItem/fields/UnidadeMedidaPDF__c.field-meta.xml
<CustomField>
    <fullName>UnidadeMedidaPDF__c</fullName>
    <formula>OpportunityLineItem.UnidadeMedidaPDF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unidade de Medida</label>
    <type>Text</type>
</CustomField>