Git Tests/force-app/main/default/default/objects/QuoteLineItem/fields/ValorCx__c.field-meta.xml
<CustomField>
    <fullName>ValorCx__c</fullName>
    <label>Valor (Principal)</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>