Git Tests/force-app/main/default/default/objects/QuoteLineItem/fields/ValorTotal__c.field-meta.xml
<CustomField>
    <fullName>ValorTotal__c</fullName>
    <formula>ValorCx__c  *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor total</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>