Git Tests/force-app/main/default/default/objects/QuoteLineItem/fields/ValorTotalPDF__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalPDF__c</fullName>
    <formula>OpportunityLineItem.ValorTotalPDF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total PDF</label>
    <type>Text</type>
</CustomField>